		cpan -T Crypt::Ed25519
		cpan -T CryptX
		
		with version number:
		
		cpan -T TODDR/Crypt-OpenSSL-RSA-0.30.tar.gz
		cpan -T MIK/CryptX-0.060.tar.gz
		(on Solaris and a few debian - arm & aarch64 now, need to specify mirror -M https://cpan.metacpan.org before the lib name)
		
0.200.0	
 - major refactor to simplify data structure
 - delete properly players even when there is no client
 - remove zombie client before reconnecting 
		
0.120.5
 - no quite...
 
0.120.4
 - disconnecting client was not using clientid so no actual client was deleted, potentially causing socket exhaustion		

0.120.3
 - finally sorted out why "codec" was being erased in settings => any preferenece that is not "represented/set" in HTML must be re-written
 
0.120.2
 - add the plugin listeners to the range-constrained ports
 - increment helper version 
		
0.120.1
 - "range" was not saved in settings (old "count" named was left)
 
0.120.0
 - let user select port range		

0.112.3 
 - replace stristr by strcasestr
 - tweak HTTP logs
 - http_parse SDEBUG statement did not print received line
 
0.112.1
 - send as many bytes as possible on partial content        

0.112.0
 - better handling of partial content in HTTP 1.1 and over-count offset        

0.111.0
 - add crypto for perl 5.30

0.110.0
 - check modelName against "Bridge"
 
0.109.0
 - only check client->model instead of client->modelName
 
0.108.2
 - memorize volume from prefs not from $client->volume() as it might be ramping up 
 
0.108.1
 - backported a few non-impacting issues from RAOP and UPnP core 
 
0.108.0
 - LMS version update
 - add FreeBSD

0.107.7
 - revert buffer indexing modifications
 
0.107.6
 - correct a key problem with circular buffer management and fill estimation
 - integer promotion caused u16 comparisons to be wrong

0.107.5
 - UDP socket don't need shutdown
 - destroy ab_mutex on thread termination
 
0.107.4
 - revert previous change
 - promote buf_fil to s16 before arithmetic
 
0.107.3